methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
                               if (bool) {avance();}}
                                                ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
                               if (bool) {avance();}}
                               ^