methods.slug.SlugTracking.scala.code


def isFacingTrail():Boolean = {avance(); var b = getCouleurSol(); var bool:Boolean = b==Color.green;
                               if (bool) {avance();}}
isFacingTrail();
